--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        path:
+          - '${{github.workspace}}'
+          - 'test'
     defaults:
       run:
         shell: bash
@@ -21,6 +24,9 @@ jobs:
         uses: bigladder/github-actions/setup-python-poetry@main
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Lint with Pylint
+        run: |
+          poetry run pylint ${{ matrix.path }}
       - name: Test
         run: |
           source $VENV
