--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,8 +10,8 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         path:
-          - '${{github.workspace}}'
-          - 'test'
+          - 'atheneum' #'${{github.workspace}}'
+          - 'test/*.py'
     defaults:
       run:
         shell: bash
@@ -27,6 +27,9 @@ jobs:
       - name: Lint with Pylint
         run: |
           poetry run pylint ${{ matrix.path }}
+      # - name: Static type checking
+      #   run: |
+      #     poetry run mypy ${{ matrix.path }}
       - name: Test
         run: |
           source $VENV
