--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,10 +26,10 @@ jobs:
           poetry run pylint atheneum #'${{github.workspace}}
           poetry run pylint test/*.py
         continue-on-error: true
-      # - name: Static type checking
-      #   run: |
-      #     poetry run mypy atheneum #'${{github.workspace}}
-      #   continue-on-error: true
+      - name: Static type checking
+        run: |
+          poetry run mypy atheneum #'${{github.workspace}}
+        continue-on-error: true
       - name: Test
         run: |
           source $VENV
