--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
 pylint = "*"
-autopep8 = "*"
 black = "*"
 mypy = "*"
 
@@ -25,11 +24,6 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 100
 
-[tool.autopep8]
-max_line_length = 100
-in-place = true
-recursive = true
-
 [[tool.mypy.overrides]]
-module = "lattice.*"
+module = "atheneum.*"
 disable_error_code = ["annotation-unchecked","import"]
