--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 100
 
+[tool.mypy]
+disallow_incomplete_defs = true
+no_implicit_optional = true
+check_untyped_defs = true
+
 [[tool.mypy.overrides]]
 module = "atheneum.*"
 disable_error_code = ["annotation-unchecked","import"]
