--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,12 +23,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Lint with Pylint
         run: |
-          poetry run pylint atheneum #'${{github.workspace}}
+          poetry run pylint ${{github.workspace}}
           poetry run pylint test/*.py
         continue-on-error: true
       - name: Static type checking
         run: |
-          poetry run mypy atheneum #'${{github.workspace}}
+          poetry run mypy ${{github.workspace}}
         continue-on-error: true
       - name: Test
         run: |
