Explicitly call python to run pytest on CI, so CWD gets loaded into path.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,5 +33,5 @@ jobs:
       - name: Test
         run: |
           source $VENV
-          poetry run pytest
+          poetry run python -m pytest
 
