--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,12 +25,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Lint with Pylint
         run: |
-          poetry run pylint ${{env.REPOSITORY_NAME}}
-          poetry run pylint test/*.py
+          poetry run python -m pylint ${{env.REPOSITORY_NAME}}
+          poetry run python -m pylint test/*.py
         continue-on-error: true
       - name: Static type checking
         run: |
-          poetry run mypy ${{env.REPOSITORY_NAME}}
+          poetry run python -m mypy ${{env.REPOSITORY_NAME}}
         continue-on-error: true
       - name: Test
         run: |
